--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css" type='text/css'>
-	<title>Home Work-1</title>
+	<title>Home Work-22</title>
 </head>
 
 <body>
-	<header >
+	<div id="app"></div>
+<!--	<header >
 		<div class="header-wrap flex">
 			<div class="logo-block flex">
 				<a href="#" class="logo">Notify<strong>.</strong></a>
@@ -122,6 +123,7 @@
 				<li><a href="#">Privacy Policy</a></li>
 			</ul>
 		</div>
-	</footer>
+	</footer>-->
+	<script src="bundle.js"></script>
 </body>
 </html>
